2001-05-17  Robert Graham Merkel  <rgmerk@mira.net>

	* doc/sgml/C/xacc-gnucash-web-browser.sgml: New file.

	* doc/sgml/C/Makefile.am: add new file.

	* doc/sgml/C/gnucash.sgml, xacc-gnome-mdi.sgml, 
	xacc-asset-liability-piecharts.sgml: more updated/new content.

	* ChangeLog: fix wrong path in (my) previous changelog
	entry.

2001-05-16  Dave Peticolas  <dave@krondo.com>

	* src/doc/design/gnucash-design.texinfo: update docs

	* src/doc/design/engine.texinfo: update docs

	* src/engine/Account.c (xaccCloneAccountSimple): remove
	redundant initialization
	(xaccAccountGetSlots): handle NULL

	* src/engine/Account.h: fix docs

	* src/engine/AccountP.h: fix spelling errors in comments

2001-05-16  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/html-utilities.scm ((gnc:html-make-empty-data-warning)): 
	update message.

	* doc/sgml/C/{gnucash.sgml, xacc-account-summary.sgml, 
	xacc-asset-liability-barcharts.sgml, xacc-reports.sgml}: more new
	material.

	* src/scm/xacc-stock-price-report.sgml: new file.

2001-05-15  Christian Stimming  <stimming@tuhh.de>

	* src/scm/commodity-utilities.scm: added another case to
	gnc:case-exchange-time-fn. Needs more work.
	(gnc:exchange-by-euro): new function. Added this function to all
	other exchange function so that exchange of EURO currencies works
	automagically in some more places. Doesn't work often enough,
	though. Darn.

	* src/scm/report/price-scatter.scm: Catch all cases that would
	cause Guppi's scatterplot to barf.

2001-05-15  Rob Browning  <rlb@cs.utexas.edu>

	* doc/sgml/C/Makefile.am (GNUCASH_SGML_FILES): remove entries
	listing missing files -- build was broken.

	* src/scm/report/transaction-report.scm (addto!): make a
	let-syntax since you apparently can't define-syntax before other
	defines in a nested let.

	* src/scm/report/register.scm (addto!): make a let-syntax since
	you apparently can't define-syntax before other defines in a
	nested let.
